Ola mundo e querySelector

--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
 
 			</section>
 		</main>
+    <script>
 
+      //alert("Olá mundo!");
+      //console.log("Olá mundo");
+      
+      //armazena o elemento H1 na varável titulo
+      var titulo = document.querySelector('h1');
+
+      //Altera o conteúdo da variável titulo
+      titulo.textContent = "Nuticionista Aparecida";
+    </script>
 	</body>
 </html>
