--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -72,16 +72,6 @@
 
 			</section>
 		</main>
-    <script>
-
-      //alert("Olá mundo!");
-      //console.log("Olá mundo");
-      
-      //armazena o elemento H1 na varável titulo
-      var titulo = document.querySelector('h1');
-
-      //Altera o conteúdo da variável titulo
-      titulo.textContent = "Nuticionista Aparecida";
-    </script>
+    <script src="./js/principal.js"></script>
 	</body>
 </html>
